# AcousticsLab

./: .clang-format  .gitignore  .gitmodules  README.md  fixed2conv_model.tflite  requirements.txt
.github/workflows/: build-docs.yml
components/acoustics/: CMakeLists.txt
components/acoustics-porting/: CMakeLists.txt  idf_component.yml
components/acoustics-porting/porting/: device_esp32s3.cpp  engine_esp32s3.cpp  processor_esp32s3.cpp  sensor_esp32s3.cpp  transport_esp32s3.cpp
components/acoustics-porting/porting/algorithm/: bridge.cpp
components/acoustics-porting/porting/algorithm/node/: speech_commands_preprocess.hpp
components/acoustics-porting/porting/algorithms/: bridge.cpp  node_bridge.cpp
components/acoustics-porting/porting/algorithms/node/: esp_feature_extractor_node.cpp  esp_feature_extractor_node.hpp  feature_extractor_node.cpp  feature_extractor_node.hpp  speech_commands_pre_node.cpp  speech_commands_pre_node.hpp
components/acoustics-porting/porting/algotithm/node/: speech_commands_preprocess.hpp
components/acoustics-porting/porting/board/: board_config.h  board_detector.h  respeaker_lite.h  respeaker_lite.hpp  respeaker_xvf3800.h  respeaker_xvf3800.hpp  xiao_s3.h  xiao_s3.hpp
components/acoustics-porting/porting/driver/lis3dhtr/: CMakeLists.txt  idf_component.yml
components/acoustics-porting/porting/driver/lis3dhtr/inc/: lis3dhtr.h
components/acoustics-porting/porting/driver/lis3dhtr/src/: lis3dhtr.cpp
components/acoustics-porting/porting/driver/littlefs/: CMakeLists.txt  idf_component.yml
components/acoustics-porting/porting/driver/littlefs/bd/: lfs_flashbd.c  lfs_flashbd.h
components/acoustics-porting/porting/driver/microphone/: CMakeLists.txt  idf_component.yml
components/acoustics-porting/porting/driver/microphone/inc/: microphone.h
components/acoustics-porting/porting/driver/microphone/src/: microphone.cpp
components/acoustics-porting/porting/engine/: tflm.hpp
components/acoustics-porting/porting/sensor/: i2smic.hpp  i2sxmos.hpp  lis3dhtr.hpp  microphone.hpp
components/acoustics-porting/porting/transport/: uart_1.hpp  uart_console.hpp
components/acoustics/algorithm/: bridge.cpp
components/acoustics/algorithm/dag/: sound_classification.hpp  sound_classification_dag.hpp
components/acoustics/algorithm/node/: speech_commands_inference.hpp  speech_commands_node.hpp
components/acoustics/algorithms/: bridge.cpp  dag_bridge.cpp  node_bridge.cpp
components/acoustics/algorithms/dag/: sound_classification_dag.cpp  sound_classification_dag.hpp
components/acoustics/algorithms/node/: inference_node.cpp  inference_node.hpp  speech_commands_node.cpp  speech_commands_node.hpp
components/acoustics/api/: command.cpp  command.hpp  context.cpp  context.hpp  executor.cpp  executor.hpp  inference_pipeline.cpp  inference_pipeline.hpp  parser.hpp  server.hpp
components/acoustics/api/v0/: cmd_break.hpp  cmd_cfggedad.hpp  cmd_rst.hpp  cmd_start.hpp  cmd_traingedad.hpp  cmd_ver.hpp  common.hpp  context.cpp  task_gedad.hpp
components/acoustics/api/v1/: cmd_break.hpp  cmd_cfgsc.hpp  cmd_info.hpp  cmd_rst.hpp  cmd_start.hpp  cmd_ver.hpp  common.hpp  context.cpp  task_sc.hpp
components/acoustics/core/: config_object.cpp  config_object.hpp  crc.hpp  data_frame.hpp  debug.hpp  encoder.hpp  logger.hpp  model.hpp  reporter.hpp  ring_buffer.hpp  serializer.hpp  status.hpp  tensor.hpp  traits.hpp  types.hpp  version.hpp
components/acoustics/core/crc/: crc16.hpp
components/acoustics/core/encoder/: adpcm.hpp  ascii.hpp  opus.hpp
components/acoustics/core/utils/: normalize.hpp  resample.hpp  sound_resample.hpp
components/acoustics/hal/: device.cpp  device.hpp  engine.cpp  engine.hpp  processor.cpp  processor.hpp  sensor.cpp  sensor.hpp  transport.cpp  transport.hpp
components/acoustics/hal/engines/: tflite_engine.cpp  tflite_engine.hpp  universal_tflite_engine.hpp
components/acoustics/hal/processors/: feature_extractor.cpp  feature_extractor.hpp
components/acoustics/module/: module_builder.hpp  module_dag.cpp  module_dag.hpp  module_io.hpp  module_node.cpp  module_node.hpp
components/acoustics/module/node/: node_input.hpp  node_output.hpp
docs/: Doxyfile  audio_classification_pipeline.md
docs/algorithms/gedad/: how-it-works.md
examples/audio_classification/: CMakeLists.txt  README.md  simple_example.cpp
examples/audio_classification/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/sound_classification/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/sound_classification/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  feature_generator.cpp  feature_generator.h  idf_component.yml
examples/sound_sampler/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/sound_sampler/main/: CMakeLists.txt  app_main.cpp
examples/vibration_anomaly_detection/: CMakeLists.txt
examples/vibration_anomaly_detection/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
models/: preprocessing.tflite
scripts/: client.py  console.py  improved_model_converter.py  opus_serial_recorder.py  release_bin.py  speech_commands_model_converter.py  speech_model_converter.py  tfjs2tflite.py
tools/adpcm_rs/: .gitignore  Cargo.toml  README.md
tools/adpcm_rs/src/: lib.rs  main.rs
tools/audio_sampler_ts/: .gitignore  README.md  package.json  tsconfig.json
tools/audio_sampler_ts/src/: audio_sampler.ts
